# polys

./: Cargo.toml  LICENSE  README.md
src/: circle.rs  lib.rs  rect.rs  reg.rs  tri.rs
