[package]
name = "polys"
version = "0.1.4"
authors = ["Breadinator <br3adina7or@gmail.com>"]
edition = "2018"
description = "A package for polygon geometry"
readme = "README.md"
repository = "https://github.com/Breadinator/polys"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
